--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
     </header>
 
-    <section class="jumbotron">
+    <section id="jumbotron">
 
     </section>
     
-    <section id="portfolio">
+    <section id="portfolio" class="pb-3">
         <div class="container">
 
             <h2>Portfolio</h2>
@@ -58,9 +58,12 @@
         </div>
     </section>
 
-    <section id="about">
+    <section id="about" class="mt-3">
         <div class="container">
             <div class="row g-3">
+                <div class="col-10 offset-md-1">
+                    About
+                </div>
                 <div class="col-12 col-sm-6">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolores sunt esse. Deserunt ducimus quibusdam animi sequi enim magnam ipsam necessitatibus eveniet ex laboriosam? Ex voluptatem qui aliquid quos reprehenderit.</p>
                 </div>
@@ -70,6 +73,38 @@
             </div>
         </div>
     </section>
+
+    <section id="contact-me">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 offset-md-1">
+                    <h2>Contact ME</h2>
+                    <div class="contact"></div>
+                    <div class="contact"></div>
+                    <div class="contact"></div>
+                    <div class="contact"></div>
+                    <div class="send"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+
+            <div class="row">
+                <div class="col-12 col-sm-4">LOCATION</div>
+                <div class="col-12 col-sm-4">AROUND THE WEB</div>
+                <div class="col-12 col-sm-4">ABOUT FREELANCER</div>
+            </div>
+            <div class="row">
+                <div class="col-6 offset-3 col-sm-4 offset-md-4">
+                    Copyright Your Website 2019
+                </div>
+            </div>
+        </div>
+    </footer>
+
     
 </body>
 </html>
