--- a/index.html
+++ b/index.html
@@ -24,8 +24,33 @@
 </head>
 <body>
 
-    <header>
+    <header class="container-fluid d-flex align-items-center">
 
+        <nav class="navbar navbar-expand-lg bg-transparent">
+
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+
+              <div class="collapse navbar-collapse d-flex align-items-center" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+                <i class="fa-solid fa-bars"></i>
+
+              </div>
+            </div>
+          </nav>
     </header>
 
     <section id="jumbotron">
