--- a/index.html
+++ b/index.html
@@ -26,31 +26,28 @@
 
     <header class="container-fluid d-flex align-items-center">
 
-        <nav class="navbar navbar-expand-lg bg-transparent">
+        <nav class="navbar fixed-center">
+            <div class="container-fluid align-items-center justify-content-between">
 
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+                <a class="navbar-brand text-white" href="#">Fixed top</a>
 
-              <div class="collapse navbar-collapse d-flex align-items-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
-                <i class="fa-solid fa-bars"></i>
+                <ul id="nav-ul">
+                    <li>
+                        <a href="">PORTFOLIO</a>
+                    </li>
+                    <li>
+                        <a href="">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="">CONTACT</a>
+                    </li>
+                </ul> 
 
-              </div>
+              <i id="ham-menu" class="fa-solid fa-bars"></i>
             </div>
+            
           </nav>
+      
     </header>
 
     <section id="jumbotron">
